# job-intel

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pages.yml  update-data.yml
docker/: Dockerfile.api  Dockerfile.worker
k8s/: api-deployment.yaml  worker-deployment.yaml
scripts/: run_daily.sh  update_jobs.py  verify_db.py
src/api/: main.py
src/api/routes/: admin.py  health.py  jobs.py
src/api/websockets/: updates.py
src/core/: config.py  constants.py
src/db/: models.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 14b81e3d6496_initial_tables.py
src/monitoring/: metrics.py
src/scrapers/: base.py  registry.py  tavily.py
src/services/: freshness.py  job_service.py  parsers.py  resource_monitor.py  summary_generator.py
src/tasks/: cleanup.py  monitoring.py  scraping.py
tests/: conftest.py
tests/e2e/: test_cleanup_flow.py  test_scraping_flow.py
tests/integration/: test_api.py
tests/unit/: test_freshness_manager.py  test_job_service.py  test_parsers.py  test_resource_monitor.py  test_scrapers.py  test_summary_generator.py  test_tasks.py
web/: admin.html  admin.js  app.js  index.html  styles.css
web/data/: innovations.json  rare_jobs.json  roles.json  summary.json
workers/: celery_app.py
