[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-intel"
version = "0.1.0"
description = "Enterprise Job Market Intelligence Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[all]>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.1",
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    "psutil>=5.9.8",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3",
    "prometheus-client>=0.19.0",
    "asgiref>=3.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "types-redis>=4.6.0.20240106",
    "types-psutil>=5.9.5.20240205",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=html --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*", "src/db/migrations/*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
